# Optimisers

./: .gitignore  HOW_TO_USE.md  README.md  config.py  optimisers.py  pyproject.toml
Config/: RegisterDecorator.py
Testing/: ParentTesting.py
optimisers/: __init__.py
optimisers/MathematicsTools/: NewtonSchulz.py  __init__.py
optimisers/config/: StateHandler.py
optimisers/core/: Adam.py  Muon.py  NAG.py  SGD.py  __init__.py
optimisers/optimisers.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
optimisers/tools/: __init__.py  opt_parent.py  utilities.py
tools/: Utilities.py  opt_parent.py
tools/MathematicsTools/: SingularValueDecomposition.py
tools/Optimisers/: Adam.py  Muon.py  NAG.py  SGD.py  __init__.py  optimisers.py
