[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimisers"
version = "0.1.0"
description = "A modular, extensible optimiser API for deep learning research."
authors = [{ name = "Tom Howard", email = "tom.j.howard01@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
torch = ["torch"]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["optimisers"]

[project.urls]
Homepage = "https://github.com/TomH0011/Optimisers"
Issues = "https://github.com/TomH0011/Optimisers/issues"
