[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimisers"
version = "0.1.0"
description = "A modular, extensible optimiser API for deep learning research"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["numpy"]

[tool.setuptools.packages.find]
where = ["optimisers"]

[tool.pytest.ini_options]
pythonpath = ["optimisers"]
testpaths = ["Testing"]
